--- a/project-proposal/proposal.tex
+++ b/project-proposal/proposal.tex
@@ -61,9 +61,11 @@ Joseph \textsc{Vinegrad} \\
 
 \section{Summary}
 
-Our group proposes to create a Music Visualizer called A$\sharp$ (A Sharp) which goes beyond the interpretive scope of current visualization software.  We find that the typical music visualization does fine at looking good alongside the music, but fails to go beyond and provide actual interpretation or insight into the song.
+Our group proposes to create a music visualizer called A$\sharp$ (A Sharp) which goes beyond the interpretive scope of current visualization software.  We find that the typical music visualization does fine at looking good alongside the music, but fails to go beyond and provide actual interpretation or insight into the song.
 
 As Edward Tufte said in his book \textit{The Visual Display of Quantitative Information}, ``At their best, graphics are instruments for reasoning about quantitative information'' (Introduction).  The job of a music visualizer, therefore, is to provide the user with enough visual information to interpret, on a higher level, the characteristics of the sound which is being visualized.  If possible, the visualization could be considered a summary of the song, and even a crude alternative.
+
+We plan to work towards this standard in our music visualizer, A$\sharp$.
 
 \section{Software description}
 
