--- a/project-proposal/proposal.tex
+++ b/project-proposal/proposal.tex
@@ -37,7 +37,7 @@ Zachary \textsc{Zimmerman} \\
 \par\vspace{0.5cm}
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
-Emre \textsc{Fındık} \\
+Emre \textsc{Findik} \\
 \emph{ef343}
 \end{flushleft}
 \end{minipage}
@@ -77,7 +77,7 @@ We plan to work towards this standard in our music visualizer, A$\sharp$.
 
 \section{Application in Graphics}
 
-Two areas that we’ll cover and graphics techniques that we’ll use (video rendering)
+Two areas that we√ïll cover and graphics techniques that we√ïll use (video rendering)
 
 \section{Software Architecture}
 
