--- a/project-proposal/proposal.tex
+++ b/project-proposal/proposal.tex
@@ -77,7 +77,7 @@ We plan to work towards this standard in our music visualizer, A$\sharp$.
 
 \section{Application in Graphics}
 
-Two areas that weÕll cover and graphics techniques that weÕll use (video rendering)
+Two areas that we'll cover and graphics techniques that we'll use (video rendering)
 
 \section{Software Architecture}
 
