adding applications in graphics

--- a/project-proposal/proposal.tex
+++ b/project-proposal/proposal.tex
@@ -77,7 +77,11 @@ We plan to work towards this standard in our music visualizer, A$\sharp$.
 
 \section{Application in Graphics}
 
-Two areas that we'll cover and graphics techniques that we'll use (video rendering)
+The graphics portion of our project will focus primarily on rendering and animation.
+ 
+Given our goal of creating complex visual displays that accurately reflect different types of music, rendering will be a key component of our work. We will likely want to incorporate a variety of shapes, textures, and lighting. In order to accomplish this, we will apply techniques such as texture mapping and shading (under various models). Additionally, our scenes will probably consist of several objects on the screen simultaneously. To account for this, we will need to use ray tracing techniques to determine relative positions of objects. Still, determining what combination of objects and shading models to use for different songs remains a challenge.
+ 
+Animation is another major area of focus for our project, as we aim to produce a dynamic moving display for our visualizer. To enhance the design and versatility of our visualizer, we will utilize different animation patterns corresponding to different types of music. To implement these, we will apply techniques related to both linear and nonlinear transformations (in 2D and 3D), as well as optimizations for seamlessly animating frame by frame. While we haven’t yet discussed animation in class, we are scheduled to do so shortly before our first milestone, giving us time to incorporate animation techniques thereafter.
 
 \section{Software Architecture}
 
