--- a/project-proposal/proposal.tex
+++ b/project-proposal/proposal.tex
@@ -69,7 +69,7 @@ We plan to work towards this standard in our music visualizer, A$\sharp$.
 
 \section{Software description}
 
-The software we are planning to create will output a video file, given an audio file input. The visuals in the video file will be built upon not only instantaneous properties of the audio but will also be dependent upon qualities such as tempo, rhythm progressions and the musical genre, which requires analyses of the audio as a whole or in parts.
+The software we are planning to create will output a video file, given an audio file input. The visuals in the video file will be built upon not only instantaneous properties of the audio but will also be dependent upon qualities such as tempo, rhythm progressions and the musical genre, which requires analyses of the audio as a whole or in parts. Each of these audio qualities will be linked to a specific visual quality in the video file, such as the color properties (hue, saturation etc.) and the output shape.
 
 
 \begin{itemize}
