changed sharp sign

--- a/project-proposal/proposal.tex
+++ b/project-proposal/proposal.tex
@@ -17,7 +17,7 @@
 
 % Title
 \HRule \\[0.4cm]
-{ \huge \bfseries A$^\sharp$ -- Music Visualizer \\[0.4cm] }
+{ \huge \bfseries A$\sharp$ -- Music Visualizer \\[0.4cm] }
 
 \HRule \\[1.5cm]
 
