update application in graphics section

--- a/project-proposal/proposal.tex
+++ b/project-proposal/proposal.tex
@@ -71,11 +71,11 @@ The software we are planning to create will output a video file, given an audio 
 
 \section{Application in Graphics}
 
-The graphics portion of our project will focus primarily on rendering and animation.
+The graphics portion of our project will focus primarily on modeling and animation.
  
-Given our goal of creating complex visual displays that accurately reflect different types of music, rendering will be a key component of our work. We will likely want to incorporate a variety of shapes, textures, and lighting. In order to accomplish this, we will apply techniques such as texture mapping and shading (under various models). Additionally, our scenes will probably consist of several objects on the screen simultaneously. To account for this, we will need to use ray tracing techniques to determine relative positions of objects. Still, determining what combination of objects and shading models to use for different songs remains a challenge.
+Given our goal of creating complex visual displays that accurately reflect different types of music, modeling will be a key component of our work. Determining what combination of objects, textures and shading models to use for different songs is an interesting challenge. Our plan is to begin with a single perfect sphere that we will transform as the song progresses. In addition to modeling the sphere, we will also keep track of some underlying mesh representing the transformed sphere. We will likely represent this mesh using an indexed triangle set, potentially with optimizations such as triangle strips and triangle fans. Since we are only using one object in our visualizer, we do not anticipate rendering to be a major challenge, giving us an opportunity to focus more on modeling. 
  
-Animation is another major area of focus for our project, as we aim to produce a dynamic moving display for our visualizer. To enhance the design and versatility of our visualizer, we will utilize different animation patterns corresponding to different types of music. To implement these, we will apply techniques related to both linear and nonlinear transformations (in 2D and 3D), as well as optimizations for seamlessly animating frame by frame. While we haven't yet discussed animation in class, we are scheduled to do so shortly before our first milestone, giving us time to incorporate animation techniques thereafter.
+Animation is another major area of focus for our project, as we aim to produce a dynamic moving display for our visualizer. To enhance the design and versatility of our visualizer, we will utilize different animation patterns corresponding to different types of music. Currently our basic idea is to perform transformations on the surface of a sphere with different speeds, shapes and magnitudes depending on the music. To implement this, we will apply techniques such as bump mapping along with splines to seamlessly animate the sphere frame by frame. While we haven’t yet discussed animation in class, we plan to do our own research on animation topics before they are introduced in class.
 
 \section{Properties of Music for Quantification}
 
