--- a/finalreport/finalreport.tex
+++ b/finalreport/finalreport.tex
@@ -3,6 +3,7 @@
 \usepackage{enumerate, multicol}
 \usepackage{amsmath}
 \usepackage{parskip}
+\usepackage{hyperref}
 
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 \newcommand{\code}{\texttt}
@@ -66,31 +67,25 @@ A$\sharp$ (A Sharp) is a music visualizer designed for meaningful sound informat
 
 A$\sharp$ models a song using a single sphere mesh. The sphere is animated through sets of transformations based on comprehensive data analysis of the song's sound file. The application analyzes several important features of a song, including the overall key, beat event times, and the frequency amplitude spectrum at each instant of the song. The results of the song analysis determines the appearance of the sphere during the playback animation.
 
+The source code for this project, as well as any extensions to it, can be found at \url{https://github.com/Oneman2feet/a-sharp/}.
+
 \section{Conceptual Mapping}
 
 In order to achieve an intuitive representation of the chosen song, the conceptual mapping of A$\sharp$'s visuals was designed with great care, as follows:
 
 \begin{itemize}
     \item Overall volume determines object size
-    \item Beats are shown by pulses in object size
+    \item Beats are shown as pulses in object size
     \item Overall pitch controlls object elevation (higher up means higher pitch)
     \item Sound complexity (distribution of frequencies) determines object shape
-    \item Mood is conveyed with color
+    \item Mood is conveyed by the color of the object
 \end{itemize}
 
-\section{Software Design}
-
-Our codebase is divided into two main modules: (1) Sound analysis and (2) Graphics. 
-
-\begin{enumerate}[(1)]
-
-\item  Sound analysis takes place as a pre-processing stage, before we display any graphics. We obtain data for the sound analysis in \code{app/analysis.py}. We utilize an audio and music processing library called librosa to do the bulk of the work in obtaining the data. The data we receive from this includes separated harmonic and percussive sounds, a melspectrogram (frequency amplitudes), tempo, beats, frame times, and a chromagram (???). All of these data sets are compiled for each frame in the song. Finally we perform operations to condense this data in order to make use of it in our graphics module (probably want more info here or in implementation section).
-
-\item Once we receive the sound data from analysis.py, we pass them along to our graphics module in \code{app/graphics.py}. First we setup our screen and initialize constants and data structures based on the sound data. At each frame, we update features of the sphere, including radius, color, vertical positon, and displacement map. This information is passed into the shaders, \code{DispMapped.vert} and \code{DispMapped.frag}, which update the appearance of the sphere on screen. 
-
-\end{enumerate}
-
 \section{Sound Analysis}
+
+Sound analysis takes place as a pre-processing stage, before the visualization is run. The sound data is collected in the module \code{analysis.py}. Much of the waveform analysis is done with the help of the audio and music processing library \href{https://github.com/bmcfee/librosa/}{LibROSA}.
+
+The data we receive from this includes separated harmonic and percussive sounds, a melspectrogram (frequency amplitudes), tempo, beats, frame times, and a chromagram (???). All of these data sets are compiled for each frame in the song. Finally we perform operations to condense this data in order to make use of it in our graphics module (probably want more info here or in implementation section).
 
 tonic
 major/minor
@@ -105,6 +100,8 @@ average pitch as a weighted average
 
 
 \section{Graphics Implementation}
+
+Once we receive the sound data from analysis.py, we pass them along to our graphics module in \code{app/graphics.py}. First we setup our screen and initialize constants and data structures based on the sound data. At each frame, we update features of the sphere, including radius, color, vertical positon, and displacement map. This information is passed into the shaders, \code{DispMapped.vert} and \code{DispMapped.frag}, which update the appearance of the sphere on screen. 
 
 physically based animation spring model
 
